# speedketchup

./: .gitignore  Cargo.toml  README.md  main.c
.cargo/: config.toml
asset/: index.html  uplot.css  uplot.js
src/: main.rs
