[package]
name = "netwatch"
version = "1.0.0"
authors = ["Gatis Peisenieks <peisenieks@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
#backtrace = "0.3.69"
#libc = { version = "0.2", default-features = false }
roxmltree = "0.18.1"
ureq = { version = "2.8.0", default-features = false, features = ["tls"] }

[profile.dev]
#panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
#panic = "abort"
strip = true
