[package]
name = "speedketchup"
version = "0.1.0"
authors = ["Gatis Peisenieks <peisenieks@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
#libc-strftime = "0.2.0"
#backtrace = "0.3.69"
libc = { version = "0.2", default-features = false }
roxmltree = "0.18.1"
#bstr = { version = "1.7.0", default-features = false, features = ["std"] }
#ureq = { version = "2.8.0", default-features = false, features = ["tls"] }

[profile.dev]
#panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

#lipo -create -output universal_app x86_app arm_app
